# tbp.monty

./: .gitignore  .pre-commit-config.yaml  .rsyncignore  .vale.ini  LICENSE  README.md  UV_PROTOTYPE.md  environment.yml  environment_arm64.yml  experiments.sh  monty  pyproject.toml  run_experiments.sh  run_parallel.py  sandbox.py  todo-temp.md
contrib/liveview_experiment/: .gitignore  README.md  STREAMING_USAGE.md  complexity_report.json  pyproject.toml
contrib/liveview_experiment/.liveview_venv/: pyvenv.cfg
contrib/liveview_experiment/conf/experiment/: randrot_10distinctobj_surf_agent_with_liveview.yaml  tutorial_surf_agent_2obj_with_liveview.yaml
contrib/liveview_experiment/scripts/: README.md  analyze_complexity.py  analyze_complexity.sh  common_env.sh  reformat.sh  report_generator.py  run.sh  run_parallel.sh  setup.ps1  setup.sh  table_formatter.py  test.ps1  test.sh
contrib/liveview_experiment/src/: __init__.py  broadcast_manager.py  broadcaster.py  broadcaster_initializer.py  command_publisher.py  command_subscriber.py  config_value_extractor.py  endpoint_registrar.py  experiment_config.py  experiment_config_extractor.py  experiment_initializer.py  experiment_state.py  liveview_experiment.py  liveview_server_standalone.py  liveview_types.py  metadata_extractor.py  monty_experiment_with_liveview.py  pubsub_compat.py  pubsub_endpoint_handler.py  pubsub_http.py  server_lifecycle.py  server_orchestrator.py  server_setup.py  setup_message_builder.py  state_field_builder.py  state_manager.py  state_normalizer.py  state_update_builder.py  state_update_fields.py  static_file_server.py  types.py  visualization_state.py  zmq_broadcaster.py  zmq_connection_manager.py  zmq_context_manager.py  zmq_message_handler.py  zmq_message_processor.py
contrib/liveview_experiment/static/js/: evidence-chart.js
contrib/liveview_experiment/templates/: experiment.html
contrib/liveview_experiment/tests/: __init__.py  test_liveview_experiment.py  test_template_parsing.py  test_visualization_state.py
(+2095 files in other folders)
